brat/test/golden/error/portpull-ambiguous.brat.golden
Error in test/golden/error/portpull-ambiguous.brat on line 6:
id2 = x, y => (id,id)(a1:x, y)
                     ^^^^^^^^^

  Port a1 is ambiguous in (a1 :: Nat), (a1 :: Nat)

